--- a/module/Album/view/album/album/delete.phtml
+++ b/module/Album/view/album/album/delete.phtml
@@ -18,7 +18,7 @@ $url = $this->url('album', array(
 ?>
 <form action="<?php echo $url; ?>" method="post">
     <div>
-        <input type="hidden" name="id" value="<?php echo (int) $album->id; ?>" />
+        <input type="hidden" name="id" value="<?php echo $album->id; ?>" />
         <input type="submit" name="del" value="Yes" />
         <input type="submit" name="del" value="No" />
     </div>
