--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -40,7 +40,8 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
+                        <li class="<?php if ($_SERVER['REQUEST_URI'] == $this->url('home')) {echo 'active';} ?>"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
+                        <li class="<?php if (0 === strpos($_SERVER['REQUEST_URI'], $this->url('album'))) {echo 'active';} ?>"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Album') ?></a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
